heap byte based cache